parallax testing on mobile, fixes

--- a/src/styles/pages/header.css
+++ b/src/styles/pages/header.css
@@ -8,6 +8,8 @@
   position: fixed;
   height: 100%;
   width: 100%;
+  grid-column: 1 / -1;
+  grid-row: 1 / -1;
 
   overflow: hidden;
   will-change: transform;
