--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,5 +1,4 @@
 :root {
-  --index: calc(1vh + 1vw);
   --white: #ffffff;
   --black: #000000;
   --dark: #1a1818;
